tests/purs/passing/ESFFIValueVar.js
export var value = 1;
