tests/purs/failing/UnsupportedFFICommonJSExports1.js
export var yes = true;
exports.no = false;
